<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notruf AUT</string>
    <string name="action_settings">Info</string>
    <string name="hello_world">Hello world!</string>
    <string name="wo">Wo ist es Passiert ?</string>
    <string name="was">Was ist passiert ?</string>
    <string name="wieviel">Wieviele Verletzte / Betroffene ?</string>
    <string name="situation">Welche Situation finden Sie vor ?</string>
    <string name="warten">Warten auf Rückfragen !</string>
    <string name="info">info</string>
    <string name="btnPolizei">Polizei</string>
    <string name="btnFeurwehr">Feuerwehr</string>
    <string name="btnRettung">Rettung</string>
    <string name="waehlen">zum Wählen auf das Logo klicken !</string>

    <style name="ButtonText">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#000000</item>
    <item name="android:gravity">center</item>
    <item name="android:textSize">15sp</item>
    <item name="android:textStyle">bold</item>
   <!-- <item name="android:shadowColor">#ffffff</item> 
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item> -->
</style>
    <string name="backgroundImageView">backgroundImageView</string>
    <string name="bewerten">Bewerten Sie die APP</string>
    <string name="empfehlen">Notruf-APP weiterempfehlen</string>
    <string name="feedback">Feedback</string>
    <string name="unterstuetzen">Um meine Arbeit zu unterstützen, und meine Motivation für neue APP´s zu steigern, kannst du natürlich spenden!</string>
    <string name="copyright">© 2013 by Martin Kuenz</string>
    <string name="version">Version: 1.5</string>
    <string name="bewertenOnClick">bewertenOnClick</string>
    <string name="aktuellePosition">aktueller Standort wird ermittelt !</string>
    
</resources>