<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    style="@style/padding_16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_6dp"
        android:layout_marginTop="@dimen/layout_4dp"
        android:onClick="bewertenOnClick"
        android:clickable="true"
        android:text="@string/bewerten"
        android:textColor="@color/bar_red"
        android:textSize="@dimen/layout_16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_6dp"
        android:layout_marginTop="@dimen/layout_20dp"
        android:onClick="empfehlen"
        android:clickable="true"
        android:text="@string/empfehlen"
        android:textColor="@color/bar_red"
        android:textSize="@dimen/layout_16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_6dp"
        android:layout_marginTop="@dimen/layout_20dp"
        android:onClick="feedback"
        android:clickable="true"
        android:text="@string/feedback"
        android:textColor="@color/bar_red"
        android:textSize="@dimen/layout_16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_48dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/unterstuetzen"
        android:textColor="@color/grau"
        android:textSize="@dimen/layout_16dp" />


    <Button
        android:id="@+id/button1"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:background="@drawable/btndonate"
        android:onClick="spendenClick"
        android:clickable="true" />
    
                 <com.google.ads.AdView
                     android:id="@+id/adView"
                     android:layout_width="320dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
                     ads:adSize="BANNER"
                     ads:adUnitId="a15134b27c3c5e3"
                     ads:loadAdOnCreate="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_5dp"
            android:text="@string/copyright"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="85dp"
            android:text="@string/version"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
 </LinearLayout>
 
</LinearLayout>